No data file and changes for PIDs

--- a/tests/test_cases/2020/commands/7D4.7DC.220101.yaml
+++ b/tests/test_cases/2020/commands/7D4.7DC.220101.yaml
@@ -1,182 +1,202 @@
 command_id: 7D4.7DC.220101
 test_cases:
-- expected_values:
-    KIA_BMS_CHG_PWR: 0.02
-    KIA_BMS_DISCHG_PWR: 0
-    KIA_BMS_SOC: 31.5
-    KIA_MDPS_MOTOR_CURRENT: 0
-    KIA_WHEEL_ANGLE_ABS: 0
-  response: |-
-    7DC10126201014A5EFF
-    7DC21003F0002000000
-    7DC220000102A01AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 0
-    KIA_BMS_SOC: 13.5
-    KIA_MDPS_MOTOR_CURRENT: 0
-    KIA_WHEEL_ANGLE_ABS: 0
-  response: |-
-    7DC1012620101505B00
-    7DC21001B0000000000
-    7DC220000101901AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 0
-    KIA_BMS_SOC: 6.5
-    KIA_MDPS_MOTOR_CURRENT: 0
-    KIA_WHEEL_ANGLE_ABS: 0
-  response: |-
-    7DC1012620101525CFF
-    7DC21000D0000000000
-    7DC220000103301AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 0
-    KIA_BMS_SOC: 100
-    KIA_MDPS_MOTOR_CURRENT: 0
-    KIA_WHEEL_ANGLE_ABS: 0
-  response: |-
-    7DC1012620101575EFF
-    7DC21FFF80000000000
-    7DC220000102201AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 5.12
-    KIA_BMS_SOC: 1.5
-    KIA_MDPS_MOTOR_CURRENT: 17
-    KIA_WHEEL_ANGLE_ABS: 51.2
-  response: |-
-    7DC1012620101585FFA
-    7DC2100030000020000
-    7DC220011102F01AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 0
-    KIA_BMS_SOC: 0
-    KIA_MDPS_MOTOR_CURRENT: 0
-    KIA_WHEEL_ANGLE_ABS: 0
-  response: |-
-    7DC10126201015D6200
-    7DC2100000000000000
-    7DC220000000001AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 0
-    KIA_BMS_SOC: 0
-    KIA_MDPS_MOTOR_CURRENT: 17
-    KIA_WHEEL_ANGLE_ABS: 0
-  response: |-
-    7DC1012620101606500
-    7DC2100000000000000
-    7DC220011110001AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 655.23
-    KIA_BMS_DISCHG_PWR: 0.48
-    KIA_BMS_SOC: 10
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: 4.8
-  response: |-
-    7DC1012620101777501
-    7DC210014FFF3003001
-    7DC22DC10103A01AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 627.23
-    KIA_BMS_DISCHG_PWR: 143.36
-    KIA_BMS_SOC: 39.5
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: 1433.6
-  response: |-
-    7DC10126201017777E9
-    7DC21FB4FF503380000
-    7DC220410102001AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0.11
-    KIA_BMS_DISCHG_PWR: 653.27
-    KIA_BMS_SOC: 4
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: -20.9
-  response: |-
-    7DC1012620101787503
-    7DC210008000BFF2F01
-    7DC22CF10103D01AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 654.39
-    KIA_BMS_DISCHG_PWR: 653.49
-    KIA_BMS_SOC: 4
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: -18.7
-  response: |-
-    7DC10126201017A7703
-    7DC210008FF9FFF4502
-    7DC22B010102901AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 0
-    KIA_BMS_SOC: 43.5
-    KIA_MDPS_MOTOR_CURRENT: 0
-    KIA_WHEEL_ANGLE_ABS: 0
-  response: |-
-    7DC10126201017B0000
-    7DC2100570000000000
-    7DC220000002E01AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 655.24
-    KIA_BMS_DISCHG_PWR: 1.31
-    KIA_BMS_SOC: 100
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: 13.1
-  response: |-
-    7DC1012620101807C01
-    7DC21FFFDFFF4008305
-    7DC221E10102F01AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 5.33
-    KIA_BMS_DISCHG_PWR: 0.27
-    KIA_BMS_SOC: 100
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: 2.7
-  response: |-
-    7DC1012620101807CF3
-    7DC21FDFD0215001B00
-    7DC22FF10101D01AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 0
-    KIA_BMS_SOC: 48
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: 0
-  response: |-
-    7DC10126201018C8A00
-    7DC21FF600000000000
-    7DC2200101027010000
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 654.29
-    KIA_BMS_SOC: 24
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: -10.7
-  response: |-
-    7DC10126201018F8B10
-    7DC2100300000FF9505
-    7DC22D210101D01AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 0
-    KIA_BMS_DISCHG_PWR: 0
-    KIA_BMS_SOC: 100
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: 0
-  response: |-
-    7DC1012620101918F00
-    7DC21FFE70000000000
-    7DC220010105A01AAAA
-- expected_values:
-    KIA_BMS_CHG_PWR: 8.93
-    KIA_BMS_DISCHG_PWR: 614.4
-    KIA_BMS_SOC: 100
-    KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: -409.6
-  response: |-
-    7DC1012620101999610
-    7DC21FAD5037DF00000
-    7DC220010102A01AAAA
+- response: '7DC10126201018F8CEE
+
+    7DC21FFF8FFFB016403
+
+    7DC22E710102F01AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 655.31
+    STINGER_BMS_DISCHG_PWR: 3.56
+    STINGER_BMS_SOC: 100
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8CFA
+
+    7DC21000FFFE9007A04
+
+    7DC22C310103001AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 655.13
+    STINGER_BMS_DISCHG_PWR: 1.22
+    STINGER_BMS_SOC: 7.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8C08
+
+    7DC21000E0019FE7904
+
+    7DC22BA10103001AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0.25
+    STINGER_BMS_DISCHG_PWR: 651.45
+    STINGER_BMS_SOC: 7
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8C09
+
+    7DC210015FFF9007804
+
+    7DC22AF10103001AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 655.29
+    STINGER_BMS_DISCHG_PWR: 1.2
+    STINGER_BMS_SOC: 10.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018E8C01
+
+    7DC210015FFF0007804
+
+    7DC22B010103001AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 655.2
+    STINGER_BMS_DISCHG_PWR: 1.2
+    STINGER_BMS_SOC: 10.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8C06
+
+    7DC210012FFCF007B04
+
+    7DC22CE10103001AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 654.87
+    STINGER_BMS_DISCHG_PWR: 1.23
+    STINGER_BMS_SOC: 9
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8C02
+
+    7DC2100130000007B04
+
+    7DC22CB10103001AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0
+    STINGER_BMS_DISCHG_PWR: 1.23
+    STINGER_BMS_SOC: 9.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8CED
+
+    7DC210003FFFD027A04
+
+    7DC22C310103001AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 655.33
+    STINGER_BMS_DISCHG_PWR: 6.34
+    STINGER_BMS_SOC: 1.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8CFE
+
+    7DC210002FFFA007B04
+
+    7DC22CD10103101AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 655.3
+    STINGER_BMS_DISCHG_PWR: 1.23
+    STINGER_BMS_SOC: 1
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8C01
+
+    7DC2100010010007704
+
+    7DC22A110103101AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0.16
+    STINGER_BMS_DISCHG_PWR: 1.19
+    STINGER_BMS_SOC: 0.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8C07
+
+    7DC21000D0000007B04
+
+    7DC22CD10103201AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0
+    STINGER_BMS_DISCHG_PWR: 1.23
+    STINGER_BMS_SOC: 6.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8CF9
+
+    7DC210004FFFF007A04
+
+    7DC22C410103201AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 655.35
+    STINGER_BMS_DISCHG_PWR: 1.22
+    STINGER_BMS_SOC: 2
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8CFC
+
+    7DC2100080000007B04
+
+    7DC22CD10103201AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0
+    STINGER_BMS_DISCHG_PWR: 1.23
+    STINGER_BMS_SOC: 4
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8C0E
+
+    7DC2100130001FF7B04
+
+    7DC22CD10103201AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0.01
+    STINGER_BMS_DISCHG_PWR: 654.03
+    STINGER_BMS_SOC: 9.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8CF7
+
+    7DC21000AFFFF017B04
+
+    7DC22CD10103101AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 655.35
+    STINGER_BMS_DISCHG_PWR: 3.79
+    STINGER_BMS_SOC: 5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8C00
+
+    7DC21000F0000007F04
+
+    7DC22EE10103101AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0
+    STINGER_BMS_DISCHG_PWR: 1.27
+    STINGER_BMS_SOC: 7.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8C0F
+
+    7DC2100370000FF7E04
+
+    7DC22EB10103101AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0
+    STINGER_BMS_DISCHG_PWR: 654.06
+    STINGER_BMS_SOC: 27.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8CFD
+
+    7DC21000B0000007E04
+
+    7DC22EC10103101AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0
+    STINGER_BMS_DISCHG_PWR: 1.26
+    STINGER_BMS_SOC: 5.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018F8CF5
+
+    7DC21FFFB0000017D04
+
+    7DC22E210103101AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0
+    STINGER_BMS_DISCHG_PWR: 3.81
+    STINGER_BMS_SOC: 100
+    STINGER_MDPS_MOTOR_CURRENT: 16
+- response: '7DC10126201018E8C01
+
+    7DC21000D0000007E04
+
+    7DC22EB10103201AAAA'
+  expected_values:
+    STINGER_BMS_CHG_PWR: 0
+    STINGER_BMS_DISCHG_PWR: 1.26
+    STINGER_BMS_SOC: 6.5
+    STINGER_MDPS_MOTOR_CURRENT: 16
