--- a/tests/test_cases/2020/commands/7E0.7E8.22E002.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E002.yaml
@@ -1,364 +1,362 @@
-command_id: 7E0.7E8.22E002
+command_id: 7E0.7E8.22E002|fc=1
 test_cases:
-- expected_values:
-    KIA_INJ_DUR_1: 0.24248
-    KIA_INJ_DUR_2: 0.24085
-    KIA_INJ_DUR_3: 0.24166
-    KIA_INJ_DUR_4: 0.23593
-  response: |-
-    7E8101462F1904B4E41
-    7E8035902FF
-    7E8102962E002FC0400
-    7E821000000B9B58801
-    7E8227F01008D020000
-    7E82300006A00002801
-    7E8242601270120012D
-    7E82501290100000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.11223
-    KIA_INJ_DUR_2: 0.11878
-    KIA_INJ_DUR_3: 0.11715
-    KIA_INJ_DUR_4: 0.10568
-  response: |-
-    7E8102962E002FC0400
-    7E82100000026261003
-    7E822FF03264F010000
-    7E8230000C80E008900
-    7E82491008F00810095
-    7E82500900000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.1278
-    KIA_INJ_DUR_2: 0.12698
-    KIA_INJ_DUR_3: 0.1278
-    KIA_INJ_DUR_4: 0.11715
-  response: |-
-    7E8102962E002FC0400
-    7E82100000026261703
-    7E822FF03104F010000
-    7E82300006A00009C00
-    7E8249B009C008F00A0
-    7E825009C0000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.13763
-    KIA_INJ_DUR_2: 0.13435
-    KIA_INJ_DUR_3: 0.13599
-    KIA_INJ_DUR_4: 0.12616
-  response: |-
-    7E8102962E002FC0400
-    7E82100000026262F03
-    7E822F3031060010000
-    7E8230000FC0900A800
-    7E824A400A6009A00AE
-    7E82500A40000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.21381
-    KIA_INJ_DUR_2: 0.21545
-    KIA_INJ_DUR_3: 0.21217
-    KIA_INJ_DUR_4: 0.21381
-  response: |-
-    7E8102962E002FC0400
-    7E82100000026264803
-    7E822FF0316D5010000
-    7E82300006A00000501
-    7E82407010301050105
-    7E825010F0100000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.16794
-    KIA_INJ_DUR_2: 0.16302
-    KIA_INJ_DUR_3: 0.16794
-    KIA_INJ_DUR_4: 0.15729
-  response: |-
-    7E8102962E002FC0400
-    7E82100000026264803
-    7E822FF032E00000000
-    7E82300006A0000CD00
-    7E824C700CD00C000D1
-    7E82500C50000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.17039
-    KIA_INJ_DUR_2: 0.16548
-    KIA_INJ_DUR_3: 0.17285
-    KIA_INJ_DUR_4: 0.16548
-  response: |-
-    7E8102962E002FC0400
-    7E82100000026265F03
-    7E822FF035A00000000
-    7E82300006A0000D000
-    7E824CA00D300CA00D5
-    7E82500CF0000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.16957
-    KIA_INJ_DUR_2: 0.1663
-    KIA_INJ_DUR_3: 0.17039
-    KIA_INJ_DUR_4: 0.1622
-  response: |-
-    7E8102962E002FC0400
-    7E82100000026266503
-    7E822FF033C00000000
-    7E82300006A0000CF00
-    7E824CB00D000C600D4
-    7E82500CE0000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.13107
-    KIA_INJ_DUR_2: 0.12861
-    KIA_INJ_DUR_3: 0.13025
-    KIA_INJ_DUR_4: 0.12042
-  response: |-
-    7E8102962E002FC0400
-    7E82100000026267603
-    7E822FF03104F010000
-    7E8230000D00800A000
-    7E8249D009F009300A3
-    7E825009B0000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0
-    KIA_INJ_DUR_2: 0
-    KIA_INJ_DUR_3: 0
-    KIA_INJ_DUR_4: 0
-  response: |-
-    7E8102962E002FC0400
-    7E82100000026269901
-    7E82299010000000000
-    7E82300006A00000000
-    7E82400000000000000
-    7E82500000000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.10895
-    KIA_INJ_DUR_2: 0.10813
-    KIA_INJ_DUR_3: 0.10813
-    KIA_INJ_DUR_4: 0.10486
-  response: |-
-    7E8102962E002FC0400
-    7E8210000002626A103
-    7E822E003101D010000
-    7E82300000E08008500
-    7E82484008400800084
-    7E82500880000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.21135
-    KIA_INJ_DUR_2: 0.21053
-    KIA_INJ_DUR_3: 0.20726
-    KIA_INJ_DUR_4: 0.20562
-  response: |-
-    7E8102962E002FC0400
-    7E8210000002626B403
-    7E822FF032607020000
-    7E82300005C0E000201
-    7E8240101FD00FB00FF
-    7E82500030100000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.20234
-    KIA_INJ_DUR_2: 0.19251
-    KIA_INJ_DUR_3: 0.20644
-    KIA_INJ_DUR_4: 0.18924
-  response: |-
-    7E8102962E002FC0400
-    7E8210000002626DA03
-    7E822FF0332EB000000
-    7E82300006A0000F700
-    7E824EB00FC00E700FD
-    7E82500F10000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.1237
-    KIA_INJ_DUR_2: 0.1278
-    KIA_INJ_DUR_3: 0.13107
-    KIA_INJ_DUR_4: 0.12452
-  response: |-
-    7E8102962E002FC0400
-    7E8210000002626FF03
-    7E822FF0313C4010000
-    7E8230000700F009700
-    7E8249C00A00098009F
-    7E825009E0000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.22446
-    KIA_INJ_DUR_2: 0.2089
-    KIA_INJ_DUR_3: 0.22774
-    KIA_INJ_DUR_4: 0.20644
-  response: |-
-    7E8102962E002FC0400
-    7E8210000002626FF03
-    7E822FF031CA3010000
-    7E8230000F608001201
-    7E824FF001601FC0018
-    7E82501050100000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.20562
-    KIA_INJ_DUR_2: 0.19579
-    KIA_INJ_DUR_3: 0.2089
-    KIA_INJ_DUR_4: 0.19251
-  response: |-
-    7E8102962E002FC0400
-    7E8210000002626FF03
-    7E822FF032D07020000
-    7E82300002A0800FB00
-    7E824EF00FF00EB0001
-    7E82501F20000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.15647
-    KIA_INJ_DUR_2: 0.15565
-    KIA_INJ_DUR_3: 0.1622
-    KIA_INJ_DUR_4: 0.15319
-  response: |-
-    7E8102962E002FC0400
-    7E821000000262FFF03
-    7E822A2035900000000
-    7E82300006A0000BF00
-    7E824BE00C600BB00C5
-    7E82500BE0000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.13599
-    KIA_INJ_DUR_2: 0.13189
-    KIA_INJ_DUR_3: 0.13271
-    KIA_INJ_DUR_4: 0.12698
-  response: |-
-    7E8102962E002FC0400
-    7E82100000029276702
-    7E8220003122E010000
-    7E82300002C0800A600
-    7E824A100A2009B00A9
-    7E82500A40000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.11387
-    KIA_INJ_DUR_2: 0.11878
-    KIA_INJ_DUR_3: 0.11551
-    KIA_INJ_DUR_4: 0.10895
-  response: |-
-    7E8102962E002FC0400
-    7E8210000002E300402
-    7E8225F02223E010000
-    7E82300006A00008B00
-    7E82491008D00850093
-    7E825008C0000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.32358
-    KIA_INJ_DUR_2: 0.32277
-    KIA_INJ_DUR_3: 0.32604
-    KIA_INJ_DUR_4: 0.32277
-  response: |-
-    7E8102962E002FC0400
-    7E8210000003026A401
-    7E822C401081F040000
-    7E82300006EFE008B01
-    7E8248A018E018A0190
-    7E82501900100000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.21709
-    KIA_INJ_DUR_2: 0.21217
-    KIA_INJ_DUR_3: 0.21545
-    KIA_INJ_DUR_4: 0.2089
-  response: |-
-    7E8102962E002FC0400
-    7E821000000312EDB01
-    7E8223D02063A020000
-    7E82300006E0C000901
-    7E82403010701FF000B
-    7E82501040100000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.09585
-    KIA_INJ_DUR_2: 0.09011
-    KIA_INJ_DUR_3: 0.09503
-    KIA_INJ_DUR_4: 0.09011
-  response: |-
-    7E8102962E002FC0400
-    7E8210000003231AA00
-    7E82223012F1D010000
-    7E8230000D60F007500
-    7E8246E0074006E0077
-    7E82500750000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.12861
-    KIA_INJ_DUR_2: 0.12698
-    KIA_INJ_DUR_3: 0.13681
-    KIA_INJ_DUR_4: 0.12861
-  response: |-
-    7E8102962E002FC0400
-    7E8210000003535BB00
-    7E822F10021EB000000
-    7E82300000267009D00
-    7E8249B00A7009D00A7
-    7E82500A10000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.17449
-    KIA_INJ_DUR_2: 0.17039
-    KIA_INJ_DUR_3: 0.17859
-    KIA_INJ_DUR_4: 0.1663
-  response: |-
-    7E8102962E002FC0400
-    7E8210000005FF99F01
-    7E8227A010807020000
-    7E8230000845A00D500
-    7E824D000DA00CB00DC
-    7E82500D40000000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.42025
-    KIA_INJ_DUR_2: 0.41943
-    KIA_INJ_DUR_3: 0.40632
-    KIA_INJ_DUR_4: 0.41943
-  response: |-
-    7E8102962E002FC0400
-    7E821000000B2AD7F01
-    7E8225D0122FF0A0000
-    7E82300006A00000102
-    7E8240002F001000200
-    7E82502FB0100000000
-- expected_values:
-    KIA_INJ_DUR_1: 1.02482
-    KIA_INJ_DUR_2: 1.03465
-    KIA_INJ_DUR_3: 1.01335
-    KIA_INJ_DUR_4: 1.04776
-  response: |-
-    7E8102962E002FC0400
-    7E821000000BFB92D01
-    7E82201015E3B100000
-    7E82300006A0000E304
-    7E824EF04D504FF04E4
-    7E82504FD0400000000
-- expected_values:
-    KIA_INJ_DUR_1: 1.2927
-    KIA_INJ_DUR_2: 1.30253
-    KIA_INJ_DUR_3: 1.30253
-    KIA_INJ_DUR_4: 1.3312
-  response: |-
-    7E8102962E002FC0400
-    7E821000000D1D00400
-    7E8220E003AB50F0000
-    7E82300006A00002A06
-    7E8243606360659063E
-    7E82506470600000000
-- expected_values:
-    KIA_INJ_DUR_1: 1.41968
-    KIA_INJ_DUR_2: 1.36151
-    KIA_INJ_DUR_3: 1.4164
-    KIA_INJ_DUR_4: 1.39101
-  response: |-
-    7E8102962E002FC0400
-    7E821000000D3D3C200
-    7E8227600360B0C0000
-    7E82300006A0000C506
-    7E8247E06C106A206CC
-    7E825068D0600000000
-- expected_values:
-    KIA_INJ_DUR_1: 1.24109
-    KIA_INJ_DUR_2: 1.27058
-    KIA_INJ_DUR_3: 1.22798
-    KIA_INJ_DUR_4: 1.26157
-  response: |-
-    7E8102962E002FC0400
-    7E821000000DDDE0000
-    7E82200007DB0100000
-    7E82300006A0000EB05
-    7E8240F06DB050406F1
-    7E82505080600000000
-- expected_values:
-    KIA_INJ_DUR_1: 0.24986
-    KIA_INJ_DUR_2: 0.23675
-    KIA_INJ_DUR_3: 0.2474
-    KIA_INJ_DUR_4: 0.23183
-  response: |-
-    7E8102962E002FC0400
-    7E821000000F0EB9901
-    7E822990107C0020000
-    7E82300006A00003101
-    7E82421012E011B0131
-    7E82501280100000000
+- response: '7E8102962E002FC0400
+
+    7E821000000BDBC8F01
+
+    7E8227C015261080000
+
+    7E82300006A00006601
+
+    7E8245F015F01630163
+
+    7E825016C0100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 189
+    STINGER_22E002_RAW_05: 188
+    STINGER_22E002_RAW_06: 143
+- response: '7E8102962E002FC0400
+
+    7E821000000ABADAD01
+
+    7E822690162B6040000
+
+    7E823000096FF008301
+
+    7E8248A017501920183
+
+    7E82501990100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 171
+    STINGER_22E002_RAW_05: 173
+    STINGER_22E002_RAW_06: 173
+- response: '7E8102962E002FC0400
+
+    7E821000000A1A58A01
+
+    7E8228301616A060000
+
+    7E82300008CFF00FF01
+
+    7E824EC01ED01F001FE
+
+    7E82501F70100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 161
+    STINGER_22E002_RAW_05: 165
+    STINGER_22E002_RAW_06: 138
+- response: '7E8102962E002FC0400
+
+    7E821000000B5A98501
+
+    7E8228D01608D020000
+
+    7E82300008CFF00FD00
+
+    7E824EF00F800F600F9
+
+    7E82500010100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 181
+    STINGER_22E002_RAW_05: 169
+    STINGER_22E002_RAW_06: 133
+- response: '7E8102962E002FC0400
+
+    7E821000000A3A78301
+
+    7E82270015FD3050000
+
+    7E8230000DAC1000001
+
+    7E824FC00F700FE00F8
+
+    7E82500080100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 163
+    STINGER_22E002_RAW_05: 167
+    STINGER_22E002_RAW_06: 131
+- response: '7E8102962E002FC0400
+
+    7E821000000B4B49401
+
+    7E82282016299030000
+
+    7E82300006A00006101
+
+    7E8244D0159014C015F
+
+    7E82501590100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 180
+    STINGER_22E002_RAW_05: 180
+    STINGER_22E002_RAW_06: 148
+- response: '7E8102962E002FC0400
+
+    7E821000000AAAA8901
+
+    7E8229E01620A050000
+
+    7E82300006A0000E300
+
+    7E824D000E200D600DE
+
+    7E82500DB0000000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 170
+    STINGER_22E002_RAW_05: 170
+    STINGER_22E002_RAW_06: 137
+- response: '7E8102962E002FC0400
+
+    7E821000000B5B58601
+
+    7E82299016287070000
+
+    7E82300006A00005301
+
+    7E82443014B0142014C
+
+    7E825014C0100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 181
+    STINGER_22E002_RAW_05: 181
+    STINGER_22E002_RAW_06: 134
+- response: '7E8102962E002FC0400
+
+    7E821000000BBB27E01
+
+    7E8228C016201070000
+
+    7E8230000B06C003001
+
+    7E8242101290122012D
+
+    7E825012A0100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 187
+    STINGER_22E002_RAW_05: 178
+    STINGER_22E002_RAW_06: 126
+- response: '7E8102962E002FC0400
+
+    7E821000000B5B59601
+
+    7E82280015EFE030000
+
+    7E82300008CFF007301
+
+    7E8246C0169016C016E
+
+    7E82501760100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 181
+    STINGER_22E002_RAW_05: 181
+    STINGER_22E002_RAW_06: 150
+- response: '7E8102962E002FC0400
+
+    7E821000000ACAA8401
+
+    7E822920162F9040000
+
+    7E823000096FF009A01
+
+    7E82485018D01870195
+
+    7E825018F0100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 172
+    STINGER_22E002_RAW_05: 170
+    STINGER_22E002_RAW_06: 132
+- response: '7E8102962E002FC0400
+
+    7E821000000AFAF8301
+
+    7E822970162E4050000
+
+    7E823000096FF00F900
+
+    7E824EA00F500ED00F4
+
+    7E82500F70000000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 175
+    STINGER_22E002_RAW_05: 175
+    STINGER_22E002_RAW_06: 131
+- response: '7E8102962E002FC0400
+
+    7E821000000ADAB7901
+
+    7E8228E01626F050000
+
+    7E82300006A0000EA00
+
+    7E824DD00E600E200E4
+
+    7E82500E80000000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 173
+    STINGER_22E002_RAW_05: 171
+    STINGER_22E002_RAW_06: 121
+- response: '7E8102962E002FC0400
+
+    7E821000000AAAC8F01
+
+    7E8228E0162DC030000
+
+    7E82300006A00006101
+
+    7E82456015B0158015E
+
+    7E82501640100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 170
+    STINGER_22E002_RAW_05: 172
+    STINGER_22E002_RAW_06: 143
+- response: '7E8102962E002FC0400
+
+    7E821000000B0ACA001
+
+    7E8227D0162C2050000
+
+    7E82300006A0000F300
+
+    7E824F100EF00F300ED
+
+    7E82500FD0000000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 176
+    STINGER_22E002_RAW_05: 172
+    STINGER_22E002_RAW_06: 160
+- response: '7E8102962E002FC0400
+
+    7E821000000ACA86D01
+
+    7E8223601653A020000
+
+    7E82300006A0000DB00
+
+    7E824D500DA00DB00D5
+
+    7E82500E10000000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 172
+    STINGER_22E002_RAW_05: 168
+    STINGER_22E002_RAW_06: 109
+- response: '7E8102962E002FC0400
+
+    7E821000000ABAF7A01
+
+    7E8228E0165BE060000
+
+    7E82300006A00002F01
+
+    7E8241F012901210128
+
+    7E825012C0100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 171
+    STINGER_22E002_RAW_05: 175
+    STINGER_22E002_RAW_06: 122
+- response: '7E8102962E002FC0400
+
+    7E821000000B4B19101
+
+    7E8227501657B060000
+
+    7E82300006A00001301
+
+    7E8241001090111010C
+
+    7E825011E0100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 180
+    STINGER_22E002_RAW_05: 177
+    STINGER_22E002_RAW_06: 145
+- response: '7E8102962E002FC0400
+
+    7E821000000ADAE8D01
+
+    7E8229A016433070000
+
+    7E82300006A00004001
+
+    7E8242E013601310139
+
+    7E825013C0100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 173
+    STINGER_22E002_RAW_05: 174
+    STINGER_22E002_RAW_06: 141
+- response: '7E8102962E002FC0400
+
+    7E821000000B6B29501
+
+    7E8227A0165DF060000
+
+    7E82300006A00002601
+
+    7E82423011901240121
+
+    7E825012F0100000000'
+  expected_values:
+    STINGER_22E002_RAW_01: 0
+    STINGER_22E002_RAW_02: 0
+    STINGER_22E002_RAW_03: 0
+    STINGER_22E002_RAW_04: 182
+    STINGER_22E002_RAW_05: 178
+    STINGER_22E002_RAW_06: 149
