--- a/tests/test_cases/2020/commands/7E0.7E8.22E004.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E004.yaml
@@ -1,142 +1,282 @@
-command_id: 7E0.7E8.22E004
+command_id: 7E0.7E8.22E004|fc=1
 test_cases:
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100F0D0C070F172
-    7E822B010F88030D0F0
-    7E823F020F01110AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100F0D0C073F170
-    7E822F010F88030D0F0
-    7E823F030F01110AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100F0D0C473F172
-    7E822F010FC8030D0F0
-    7E823F030F01110AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100F8D0C070F170
-    7E822F010F88830D0F0
-    7E823F030F01010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100F8D1C077F276
-    7E822FA10F88030D4F0
-    7E823F030F01010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100F9D0C473F176
-    7E822FA10F08030D8F3
-    7E823F330F01010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD0C070F476
-    7E822F810F08030D8F0
-    7E823F030FF1010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD0C470F476
-    7E822FA10F08030D8F3
-    7E823F330F01011AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD0C870F276
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD0C877F476
+
+    7E822FA10F08030D8F7
+
+    7E823F730FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 208
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 244
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD0C877F476
+
+    7E822FB10F08035D9F7
+
+    7E823F730FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 208
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 244
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD0C877F476
+
+    7E822FA10F08035D9F7
+
+    7E823F730FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 208
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 244
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD1C877F076
+
+    7E822FA10F08035D9F7
+
+    7E823F730FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 209
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 240
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD1C877F276
+
+    7E822F810F88030D4F1
+
+    7E823F130F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 209
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD1C877F276
+
+    7E822FB10F88030D4F3
+
+    7E823F330F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 209
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD1C877F276
+
+    7E822FB10F88030D4F7
+
+    7E823F330F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 209
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD1C877F276
+
+    7E822FA10F88030D4F7
+
+    7E823F730FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 209
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD1C877F276
+
+    7E822FA10F88030D4F7
+
+    7E823F730F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 209
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD1C877F276
+
+    7E822FB10F88030D4F7
+
+    7E823F730F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 209
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
+- response: '7E8101962E004FFFF03
+
+    7E82100FDDDC877F276
+
+    7E822FB10F88030DCF7
+
+    7E823F730F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 221
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
+- response: '7E8101962E004FFFF03
+
+    7E82100FDDDC877F276
+
     7E822FA10F08030DCF7
-    7E823F730F51010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD0C870F476
-    7E822BA10F08035D9F7
-    7E823F720FF1010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD0C870F476
-    7E822BA11F08031D8F7
-    7E823F722FF1010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD0C870F477
-    7E822FA10F08030D8F3
-    7E823F330FF1010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD0C870F876
-    7E822FA10F08030D8F3
-    7E823F330FF1010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
+
+    7E823F730F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 221
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
+- response: '7E8101962E004FFFF03
+
     7E82100FDD0C877F476
-    7E822FA11F08030D8FB
-    7E823FB32FF1010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD0C877F476
-    7E822FA11F08031D8F3
-    7E823F333FF1010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD0CC70F476
-    7E822F810F08030D8F1
-    7E823F130FF1010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD1C470F076
+
     7E822FA10F08030D8F3
-    7E823F330FF1010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDD1C870F276
-    7E822FE10F08030DCF3
-    7E823F330F51010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FDDDC070F276
-    7E822F810F08030DCF0
-    7E823F030F51010AAAA
-- expected_values:
-    KIA_22E004: 100
-  response: |-
-    7E8101962E004FFFF03
-    7E82100FFD0C077F476
-    7E822F810F08030D8F0
-    7E823F030FF1010AAAA
+
+    7E823F330FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 208
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 244
+- response: '7E8101962E004FFFF03
+
+    7E82100FDDDC877F876
+
+    7E822FA10F08030D8F3
+
+    7E823F330FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 221
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 248
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD0C877F476
+
+    7E822FB10F08031D8F7
+
+    7E823F730FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 208
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 244
+- response: '7E8101962E004FFFF03
+
+    7E82100FDDDC877F876
+
+    7E822FA10F08031D8F3
+
+    7E823F330FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 221
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 248
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD0C877F476
+
+    7E822FA10F08031D8F7
+
+    7E823F730F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 208
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 244
+- response: '7E8101962E004FFFF03
+
+    7E82100FDD0C877F476
+
+    7E822FA10F08031D8F7
+
+    7E823F730FF1010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 208
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 244
+- response: '7E8101962E004FFFF03
+
+    7E82100FDDDC877F276
+
+    7E822FA10F08031DCF3
+
+    7E823F330F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 221
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
+- response: '7E8101962E004FFFF03
+
+    7E82100FDDDC877F276
+
+    7E822FA10F08031DCF7
+
+    7E823F730F51010AAAA'
+  expected_values:
+    STINGER_22E004_RAW_01: 0
+    STINGER_22E004_RAW_02: 253
+    STINGER_22E004_RAW_03: 221
+    STINGER_22E004_RAW_04: 200
+    STINGER_22E004_RAW_05: 119
+    STINGER_22E004_RAW_06: 242
