--- a/tests/test_cases/2020/commands/7E0.7E8.22E00A.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E00A.yaml
@@ -1,189 +1,282 @@
-command_id: 7E0.7E8.22E00A
+command_id: 7E0.7E8.22E00A|fc=1
 test_cases:
-- expected_values:
-    KIA_KNOCK_LEARN_1: 11.6
-    KIA_KNOCK_RETARD_1: 0
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: -13
-    KIA_KNOCK_RETARD_4: 0
-  response: |-
-    7E8101862E00A7F0700
-    7E82100000000005000
-    7E82200000080BF0000
-    7E82300D0203AAAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 0
-    KIA_KNOCK_RETARD_1: -0.2
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: 10
-    KIA_KNOCK_RETARD_4: -10.8
-  response: |-
-    7E8101862E00A7F0700
-    7E82100000000005000
-    7E822FFFFFF8032CA00
-    7E823FF701700AAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 6.6
-    KIA_KNOCK_RETARD_1: -0.2
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: -13
-    KIA_KNOCK_RETARD_4: 0
-  response: |-
-    7E8101862E00A7F0700
-    7E82100000000005000
-    7E822FFFFFF80BF0000
-    7E823FFD02021AAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: -6.6
-    KIA_KNOCK_RETARD_1: -0.2
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: -13
-    KIA_KNOCK_RETARD_4: 0
-  response: |-
-    7E8101862E00A7F0700
-    7E82100000000005000
-    7E822FFFFFF80BF0000
-    7E823FFD020DFAAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 21.4
-    KIA_KNOCK_RETARD_1: -0.2
-    KIA_KNOCK_RETARD_2: -6.4
-    KIA_KNOCK_RETARD_3: -13.2
-    KIA_KNOCK_RETARD_4: -1
-  response: |-
-    7E8101862E00A7F0700
-    7E82100000000005000
-    7E822FFFFFFE0BEFB02
-    7E823FFC6206BAAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 11.6
-    KIA_KNOCK_RETARD_1: -11.2
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: -13
-    KIA_KNOCK_RETARD_4: 15.8
-  response: |-
-    7E8101862E00A7F0700
-    7E82100000005218600
-    7E8224C57C880BF4F03
-    7E8235AD0203AAAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 23.2
-    KIA_KNOCK_RETARD_1: -0.2
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: -13
-    KIA_KNOCK_RETARD_4: 0
-  response: |-
-    7E8101862E00A7F0700
-    7E8210000000F207500
-    7E822FFFFFF80BF0000
-    7E823FFD02074AAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 18.2
-    KIA_KNOCK_RETARD_1: -0.2
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: -13
-    KIA_KNOCK_RETARD_4: 5
-  response: |-
-    7E8101862E00A7F0700
-    7E8210000005D208F00
-    7E822FFFFFF80BF1903
-    7E8235AD0205BAAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: -23.2
-    KIA_KNOCK_RETARD_1: -10.2
-    KIA_KNOCK_RETARD_2: 0
-    KIA_KNOCK_RETARD_3: 16.6
-    KIA_KNOCK_RETARD_4: 16.2
-  response: |-
-    7E8101862E00A7F0700
-    7E82100000091199300
-    7E822575ECD00535101
-    7E8235A9C198CAAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 21.4
-    KIA_KNOCK_RETARD_1: -12
-    KIA_KNOCK_RETARD_2: 19.2
-    KIA_KNOCK_RETARD_3: -12.6
-    KIA_KNOCK_RETARD_4: 11.2
-  response: |-
-    7E8101862E00A7F0700
-    7E821000100D8208100
-    7E8224754C460C13803
-    7E8235AEF206BAAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 16.6
-    KIA_KNOCK_RETARD_1: -8.6
-    KIA_KNOCK_RETARD_2: -6.4
-    KIA_KNOCK_RETARD_3: -8.4
-    KIA_KNOCK_RETARD_4: -16.6
-  response: |-
-    7E8101862E00A7F0700
-    7E82100010117228600
-    7E8225664D5E0D6AD03
-    7E8235A602253AAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 23.2
-    KIA_KNOCK_RETARD_1: -10.6
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: -13
-    KIA_KNOCK_RETARD_4: -0.2
-  response: |-
-    7E8101862E00A7F0700
-    7E82100030091218900
-    7E822505BCB80BFFF02
-    7E8235AD02074AAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 0
-    KIA_KNOCK_RETARD_1: -10
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: 10
-    KIA_KNOCK_RETARD_4: -10.8
-  response: |-
-    7E8101862E00A7F0700
-    7E821000FFCA2179B00
-    7E8225F5FCE8032CA00
-    7E8235A701700AAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: -23.2
-    KIA_KNOCK_RETARD_1: -10.6
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: -16.6
-    KIA_KNOCK_RETARD_4: 5.8
-  response: |-
-    7E8101862E00A7F0700
-    7E821001600751FB300
-    7E8225559CB80AD1D03
-    7E8235AA41F8CAAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 13.2
-    KIA_KNOCK_RETARD_1: -10.2
-    KIA_KNOCK_RETARD_2: -6.4
-    KIA_KNOCK_RETARD_3: -13.2
-    KIA_KNOCK_RETARD_4: -1
-  response: |-
-    7E8101862E00A7F0700
-    7E821001AFFF2197E00
-    7E8225F5FCDE0BEFB02
-    7E8235AC62042AAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: -0.2
-    KIA_KNOCK_RETARD_1: -10.6
-    KIA_KNOCK_RETARD_2: 0
-    KIA_KNOCK_RETARD_3: -16.2
-    KIA_KNOCK_RETARD_4: 11.6
-  response: |-
-    7E8101862E00A7F0700
-    7E82100EA01C61D9B00
-    7E8225659CB00AF3A03
-    7E8235ABE1FFFAAAAAA
-- expected_values:
-    KIA_KNOCK_LEARN_1: 23.2
-    KIA_KNOCK_RETARD_1: -9.8
-    KIA_KNOCK_RETARD_2: -25.6
-    KIA_KNOCK_RETARD_3: -13
-    KIA_KNOCK_RETARD_4: 21
-  response: |-
-    7E8101862E00A7F0700
-    7E82100F00064209800
-    7E8226161CF80BF6903
-    7E8235AD02074AAAAAA
+- response: '7E8101862E00A7F0700
+
+    7E821001A00DF20A700
+
+    7E8223E52C080BF5503
+
+    7E8235AD0204AAAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 26
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 223
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001900CD20A700
+
+    7E8223E52C080BF5603
+
+    7E8235AD02042AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 25
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 205
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001700CD20A700
+
+    7E8223E52C080BF5603
+
+    7E8235AD02053AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 23
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 205
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001900D920A700
+
+    7E8223E52C080BF5603
+
+    7E8235AD0205BAAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 25
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 217
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001800CF20A700
+
+    7E8223E52C080BF5603
+
+    7E8235AD02042AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 24
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 207
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001800D120A700
+
+    7E8223E52C080BF5603
+
+    7E8235AD02042AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 24
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 209
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001800C620A700
+
+    7E8223E52C080BF5603
+
+    7E8235AD02053AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 24
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 198
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001900DD20A700
+
+    7E8223E52C080BF5503
+
+    7E8235AD02053AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 25
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 221
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001800CE20A700
+
+    7E8223E52C080BF5603
+
+    7E8235AD02042AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 24
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 206
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001800DE20A700
+
+    7E8223E52C080BF5503
+
+    7E8235AD02042AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 24
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 222
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001800E420A700
+
+    7E8223E52C080BF5503
+
+    7E8235AD02042AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 24
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 228
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001800C820A700
+
+    7E8223E52C080BF5603
+
+    7E8235AD02053AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 24
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 200
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001A00D720A700
+
+    7E8223E52C080BF5603
+
+    7E8235AD02053AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 26
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 215
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 167
+- response: '7E8101862E00A7F0700
+
+    7E821001A00DB20A800
+
+    7E8223E52C080BF5503
+
+    7E8235AD0205BAAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 26
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 219
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 168
+- response: '7E8101862E00A7F0700
+
+    7E821001700DC20A800
+
+    7E8223E52C080BF5503
+
+    7E8235AD02053AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 23
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 220
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 168
+- response: '7E8101862E00A7F0700
+
+    7E821001900E120A800
+
+    7E8223E52C080BF5503
+
+    7E8235AD0205BAAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 25
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 225
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 168
+- response: '7E8101862E00A7F0700
+
+    7E821001A00D320A800
+
+    7E8223E52C080BF5603
+
+    7E8235AD0205BAAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 26
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 211
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 168
+- response: '7E8101862E00A7F0700
+
+    7E821001A00CC20A800
+
+    7E8223E52C080BF5703
+
+    7E8235AD02053AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 26
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 204
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 168
+- response: '7E8101862E00A7F0700
+
+    7E821001800D020A800
+
+    7E8223E52C080BF5603
+
+    7E8235AD0204AAAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 24
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 208
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 168
+- response: '7E8101862E00A7F0700
+
+    7E821001800D120A800
+
+    7E8223F52C080BF5603
+
+    7E8235AD02042AAAAAA'
+  expected_values:
+    STINGER_22E00A_RAW_01: 0
+    STINGER_22E00A_RAW_02: 24
+    STINGER_22E00A_RAW_03: 0
+    STINGER_22E00A_RAW_04: 209
+    STINGER_22E00A_RAW_05: 32
+    STINGER_22E00A_RAW_06: 168
